--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello this is my website
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body style="background-color: aqua;">
+    <h1>This is heading</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo inventore veritatis dolore molestiae possimus id, molestias repellendus unde, numquam ducimus cum doloremque quidem. Dolorem neque, vitae modi optio, sunt blanditiis ipsum deleniti odio quisquam rem natus. Quisquam laborum harum in natus deleniti, amet atque ab quis accusamus vitae odit consequuntur!</p>
+</body>
+</html>
